# serializer version: 1
# name: TestProjectionContract.test_l0_summary_format_snapshot
  dict({
    'content': dict({
      'importance': 0.44999999999999996,
      'summary': 'Snapshot projection over 3 nodes and 3 edges. Key communities: app/service.py cluster, create_user cluster, get_user cluster.',
      'tags': list([
        'snapshot',
        'projection',
        'overview',
      ]),
    }),
    'id': 'proj:proj_932c8f76ce8fe80cf025:l0',
    'kind': 'summary',
    'layer': 'L0',
    'meta': dict({
      'algo_version': 'algo_v2_hierarchical',
      'covers_edges': list([
        'doc:1->sym:a',
        'doc:1->sym:b',
        'sym:a->sym:b',
      ]),
      'covers_nodes': list([
        'doc:1',
        'sym:a',
        'sym:b',
      ]),
      'hidden_edge_count': 0,
      'hierarchy_level': 0,
      'parent_reason': 'community_coarsening',
      'projection_method': 'leiden',
      'root_cluster': 'c0',
      'xrefs': list([
        dict({
          'dst': 'c1',
          'src': 'c0',
          'weight': 8.0,
        }),
        dict({
          'dst': 'c2',
          'src': 'c0',
          'weight': 8.0,
        }),
        dict({
          'dst': 'c2',
          'src': 'c1',
          'weight': 4.0,
        }),
        dict({
          'dst': 'c0',
          'src': 'c1',
          'weight': 2.0,
        }),
        dict({
          'dst': 'c0',
          'src': 'c2',
          'weight': 2.0,
        }),
      ]),
    }),
    'path': '/projection/proj_932c8f76ce8fe80cf025/l0',
    'render': dict({
      'text': 'Snapshot projection over 3 nodes and 3 edges. Key communities: app/service.py cluster, create_user cluster, get_user cluster.',
    }),
    'source': dict({
      'domain': 'code',
      'refs': list([
        dict({
          'branch': 'main',
          'commit': 'abc',
          'id': 'repo',
          'repo': 'repo',
          'type': 'repository',
        }),
        dict({
          'branch': 'main',
          'commit': 'abc',
          'id': 'abc',
          'repo': 'repo',
          'type': 'commit',
        }),
        dict({
          'branch': 'main',
          'commit': 'abc',
          'id': 'snap:repo:abc',
          'label': 'scope:snapshot:repo',
          'repo': 'repo',
          'type': 'document',
        }),
      ]),
    }),
    'title': 'Projection snapshot L0',
    'version': 'v1',
  })
# ---
# name: TestProjectionContract.test_l1_sections_format_snapshot
  dict({
    'content': dict({
      'decisions': list([
        'cluster_method=leiden',
        'backbone_edges=2',
        'hierarchy_level=0',
        'root_cluster=c0',
      ]),
      'navigation': list([
        dict({
          'label': 'app/service.py cluster',
          'ref': dict({
            'branch': 'main',
            'commit': 'abc',
            'id': 'doc:1',
            'label': 'app/service.py',
            'path': 'app/service.py',
            'repo': 'repo',
            'type': 'file',
          }),
        }),
        dict({
          'label': 'create_user cluster',
          'ref': dict({
            'branch': 'main',
            'commit': 'abc',
            'id': 'sym:a',
            'label': 'create_user',
            'path': 'app/service.py',
            'repo': 'repo',
            'type': 'symbol',
          }),
        }),
        dict({
          'label': 'get_user cluster',
          'ref': dict({
            'branch': 'main',
            'commit': 'abc',
            'id': 'sym:b',
            'label': 'get_user',
            'path': 'app/service.py',
            'repo': 'repo',
            'type': 'symbol',
          }),
        }),
      ]),
      'related_code': list([
        dict({
          'branch': 'main',
          'commit': 'abc',
          'id': 'repo',
          'repo': 'repo',
          'type': 'repository',
        }),
        dict({
          'branch': 'main',
          'commit': 'abc',
          'id': 'abc',
          'repo': 'repo',
          'type': 'commit',
        }),
        dict({
          'branch': 'main',
          'commit': 'abc',
          'id': 'snap:repo:abc',
          'label': 'scope:snapshot:repo',
          'repo': 'repo',
          'type': 'document',
        }),
      ]),
      'related_memory': list([
      ]),
      'relations': dict({
        'backbone': list([
          dict({
            'dst': 'c1',
            'src': 'c0',
            'type': 'tree',
          }),
          dict({
            'dst': 'c2',
            'src': 'c0',
            'type': 'tree',
          }),
        ]),
        'hierarchy': list([
        ]),
        'xref': list([
          dict({
            'confidence': 1.0,
            'id': 'c0->c1',
            'title': 'c0 -> c1',
            'type': 'xref',
          }),
          dict({
            'confidence': 1.0,
            'id': 'c0->c2',
            'title': 'c0 -> c2',
            'type': 'xref',
          }),
          dict({
            'confidence': 1.0,
            'id': 'c1->c2',
            'title': 'c1 -> c2',
            'type': 'xref',
          }),
          dict({
            'confidence': 0.5,
            'id': 'c1->c0',
            'title': 'c1 -> c0',
            'type': 'xref',
          }),
          dict({
            'confidence': 0.5,
            'id': 'c2->c0',
            'title': 'c2 -> c0',
            'type': 'xref',
          }),
        ]),
      }),
      'sections': list([
        dict({
          'name': 'app/service.py cluster',
          'text': '1 nodes',
        }),
        dict({
          'name': 'create_user cluster',
          'text': '1 nodes',
        }),
        dict({
          'name': 'get_user cluster',
          'text': '1 nodes',
        }),
      ]),
      'summary': 'Snapshot hierarchy with 3 clusters, 2 directed backbone links, and 5 cross-links.',
    }),
    'id': 'proj:proj_932c8f76ce8fe80cf025:l1',
    'kind': 'summary',
    'layer': 'L1',
    'meta': dict({
      'algo_version': 'algo_v2_hierarchical',
      'covers_edges': list([
        'doc:1->sym:a',
        'doc:1->sym:b',
        'sym:a->sym:b',
      ]),
      'covers_nodes': list([
        'doc:1',
        'sym:a',
        'sym:b',
      ]),
      'hidden_edge_count': 0,
      'hierarchy_level': 0,
      'parent_reason': 'backbone_arborescence',
      'projection_method': 'leiden',
      'root_cluster': 'c0',
      'xrefs': list([
        dict({
          'dst': 'c1',
          'src': 'c0',
          'weight': 8.0,
        }),
        dict({
          'dst': 'c2',
          'src': 'c0',
          'weight': 8.0,
        }),
        dict({
          'dst': 'c2',
          'src': 'c1',
          'weight': 4.0,
        }),
        dict({
          'dst': 'c0',
          'src': 'c1',
          'weight': 2.0,
        }),
        dict({
          'dst': 'c0',
          'src': 'c2',
          'weight': 2.0,
        }),
      ]),
    }),
    'path': '/projection/proj_932c8f76ce8fe80cf025/l1',
    'render': dict({
      'text': 'Snapshot hierarchy with 3 clusters, 2 directed backbone links, and 5 cross-links.',
    }),
    'source': dict({
      'domain': 'code',
      'refs': list([
        dict({
          'branch': 'main',
          'commit': 'abc',
          'id': 'repo',
          'repo': 'repo',
          'type': 'repository',
        }),
        dict({
          'branch': 'main',
          'commit': 'abc',
          'id': 'abc',
          'repo': 'repo',
          'type': 'commit',
        }),
        dict({
          'branch': 'main',
          'commit': 'abc',
          'id': 'snap:repo:abc',
          'label': 'scope:snapshot:repo',
          'repo': 'repo',
          'type': 'document',
        }),
      ]),
    }),
    'title': 'Projection snapshot L1',
    'version': 'v1',
  })
# ---
# name: TestProjectionContract.test_l2_chunks_format_snapshot
  list([
    dict({
      'chunk_id': 'c_c0',
      'content': dict({
        'facts': list([
          dict({
            'type': 'cluster_size',
            'value': 1,
          }),
          dict({
            'type': 'cluster_label',
            'value': 'app/service.py cluster',
          }),
          dict({
            'type': 'dominant_kind',
            'value': None,
          }),
          dict({
            'type': 'dominant_language',
            'value': None,
          }),
        ]),
        'file': 'app/service.py',
        'refs': list([
          dict({
            'branch': 'main',
            'commit': 'abc',
            'id': 'doc:1',
            'label': 'app/service.py',
            'path': 'app/service.py',
            'repo': 'repo',
            'type': 'file',
          }),
        ]),
        'snippet': 'Document cluster for app/service.py',
      }),
      'id': 'chunk:c_c0',
      'kind': 'cluster_evidence',
      'layer': 'L2',
      'meta': dict({
        'aggregation': dict({
          'common_path_prefix': 'app/service.py',
          'doc_count': 1,
          'dominant_kind': None,
          'dominant_language': None,
          'edge_type_distribution': dict({
          }),
          'kind_distribution': dict({
          }),
          'member_count': 1,
          'representative': 'doc:1',
          'symbol_count': 0,
          'top_members': list([
            'doc:1',
          ]),
        }),
        'centrality': dict({
          'degree': 2.0,
          'degree_centrality': 1.0,
        }),
        'cluster_id': 'c0',
      }),
      'path': './chunks/c_c0.json',
      'render': dict({
        'text': 'Document cluster for app/service.py',
      }),
      'source': dict({
        'domain': 'code',
        'refs': list([
          dict({
            'branch': 'main',
            'commit': 'abc',
            'id': 'doc:1',
            'label': 'app/service.py',
            'path': 'app/service.py',
            'repo': 'repo',
            'type': 'file',
          }),
        ]),
      }),
      'title': 'app/service.py cluster',
      'version': 'v1',
    }),
    dict({
      'chunk_id': 'c_c1',
      'content': dict({
        'facts': list([
          dict({
            'type': 'cluster_size',
            'value': 1,
          }),
          dict({
            'type': 'cluster_label',
            'value': 'create_user cluster',
          }),
          dict({
            'type': 'dominant_kind',
            'value': 'function',
          }),
          dict({
            'type': 'dominant_language',
            'value': 'python',
          }),
        ]),
        'file': 'app/service.py',
        'range': dict({
          'end_col': 0,
          'end_line': 5,
          'start_col': 0,
          'start_line': 5,
        }),
        'refs': list([
          dict({
            'branch': 'main',
            'commit': 'abc',
            'id': 'sym:a',
            'label': 'create_user',
            'path': 'app/service.py',
            'repo': 'repo',
            'type': 'symbol',
          }),
        ]),
        'signature': 'create_user',
        'snippet': 'function create_user in app/service.py',
        'symbol': 'create_user',
      }),
      'id': 'chunk:c_c1',
      'kind': 'cluster_evidence',
      'layer': 'L2',
      'meta': dict({
        'aggregation': dict({
          'common_path_prefix': 'app/service.py',
          'doc_count': 0,
          'dominant_kind': 'function',
          'dominant_language': 'python',
          'edge_type_distribution': dict({
          }),
          'kind_distribution': dict({
            'function': 1,
          }),
          'member_count': 1,
          'representative': 'sym:a',
          'symbol_count': 1,
          'top_members': list([
            'sym:a',
          ]),
        }),
        'centrality': dict({
          'degree': 2.0,
          'degree_centrality': 1.0,
        }),
        'cluster_id': 'c1',
      }),
      'path': './chunks/c_c1.json',
      'render': dict({
        'text': 'function create_user in app/service.py',
      }),
      'source': dict({
        'domain': 'code',
        'refs': list([
          dict({
            'branch': 'main',
            'commit': 'abc',
            'id': 'sym:a',
            'label': 'create_user',
            'path': 'app/service.py',
            'repo': 'repo',
            'type': 'symbol',
          }),
        ]),
      }),
      'title': 'create_user cluster',
      'version': 'v1',
    }),
    dict({
      'chunk_id': 'c_c2',
      'content': dict({
        'facts': list([
          dict({
            'type': 'cluster_size',
            'value': 1,
          }),
          dict({
            'type': 'cluster_label',
            'value': 'get_user cluster',
          }),
          dict({
            'type': 'dominant_kind',
            'value': 'function',
          }),
          dict({
            'type': 'dominant_language',
            'value': 'python',
          }),
        ]),
        'file': 'app/service.py',
        'range': dict({
          'end_col': 0,
          'end_line': 10,
          'start_col': 0,
          'start_line': 10,
        }),
        'refs': list([
          dict({
            'branch': 'main',
            'commit': 'abc',
            'id': 'sym:b',
            'label': 'get_user',
            'path': 'app/service.py',
            'repo': 'repo',
            'type': 'symbol',
          }),
        ]),
        'signature': 'get_user',
        'snippet': 'function get_user in app/service.py',
        'symbol': 'get_user',
      }),
      'id': 'chunk:c_c2',
      'kind': 'cluster_evidence',
      'layer': 'L2',
      'meta': dict({
        'aggregation': dict({
          'common_path_prefix': 'app/service.py',
          'doc_count': 0,
          'dominant_kind': 'function',
          'dominant_language': 'python',
          'edge_type_distribution': dict({
          }),
          'kind_distribution': dict({
            'function': 1,
          }),
          'member_count': 1,
          'representative': 'sym:b',
          'symbol_count': 1,
          'top_members': list([
            'sym:b',
          ]),
        }),
        'centrality': dict({
          'degree': 2.0,
          'degree_centrality': 1.0,
        }),
        'cluster_id': 'c2',
      }),
      'path': './chunks/c_c2.json',
      'render': dict({
        'text': 'function get_user in app/service.py',
      }),
      'source': dict({
        'domain': 'code',
        'refs': list([
          dict({
            'branch': 'main',
            'commit': 'abc',
            'id': 'sym:b',
            'label': 'get_user',
            'path': 'app/service.py',
            'repo': 'repo',
            'type': 'symbol',
          }),
        ]),
      }),
      'title': 'get_user cluster',
      'version': 'v1',
    }),
  ])
# ---
# name: TestProjectionContract.test_l2_index_format_snapshot
  dict({
    'content': dict({
      'chunks': list([
        dict({
          'chunk_id': 'c_c0',
          'end_line': None,
          'file': 'app/service.py',
          'kind': 'cluster_evidence',
          'label': 'app/service.py',
          'path': './chunks/c_c0.json',
          'start_line': None,
        }),
        dict({
          'chunk_id': 'c_c1',
          'end_line': 5,
          'file': 'app/service.py',
          'kind': 'cluster_evidence',
          'label': 'create_user',
          'path': './chunks/c_c1.json',
          'start_line': 5,
        }),
        dict({
          'chunk_id': 'c_c2',
          'end_line': 10,
          'file': 'app/service.py',
          'kind': 'cluster_evidence',
          'label': 'get_user',
          'path': './chunks/c_c2.json',
          'start_line': 10,
        }),
      ]),
    }),
    'id': 'proj:proj_932c8f76ce8fe80cf025:l2',
    'kind': 'summary',
    'layer': 'L2',
    'meta': dict({
      'algo_version': 'algo_v2_hierarchical',
      'covers_edges': list([
        'doc:1->sym:a',
        'doc:1->sym:b',
        'sym:a->sym:b',
      ]),
      'covers_nodes': list([
        'doc:1',
        'sym:a',
        'sym:b',
      ]),
      'hidden_edge_count': 0,
      'parent_reason': 'chunked_evidence',
      'projection_method': 'leiden',
      'xrefs': list([
        dict({
          'dst': 'c1',
          'src': 'c0',
          'weight': 8.0,
        }),
        dict({
          'dst': 'c2',
          'src': 'c0',
          'weight': 8.0,
        }),
        dict({
          'dst': 'c2',
          'src': 'c1',
          'weight': 4.0,
        }),
        dict({
          'dst': 'c0',
          'src': 'c1',
          'weight': 2.0,
        }),
        dict({
          'dst': 'c0',
          'src': 'c2',
          'weight': 2.0,
        }),
      ]),
    }),
    'path': '/projection/proj_932c8f76ce8fe80cf025/l2',
    'render': dict({
      'text': 'Detailed evidence available in 3 chunks.',
    }),
    'source': dict({
      'domain': 'code',
      'refs': list([
        dict({
          'branch': 'main',
          'commit': 'abc',
          'id': 'repo',
          'repo': 'repo',
          'type': 'repository',
        }),
        dict({
          'branch': 'main',
          'commit': 'abc',
          'id': 'abc',
          'repo': 'repo',
          'type': 'commit',
        }),
        dict({
          'branch': 'main',
          'commit': 'abc',
          'id': 'snap:repo:abc',
          'label': 'scope:snapshot:repo',
          'repo': 'repo',
          'type': 'document',
        }),
      ]),
    }),
    'title': 'Projection snapshot L2',
    'version': 'v1',
  })
# ---
# name: TestProjectionContract.test_projection_minimal_symbol_deterministic_snapshot
  list([
    dict({
      'chunk_id': 'c_c0',
      'content': dict({
        'facts': list([
          dict({
            'type': 'cluster_size',
            'value': 1,
          }),
          dict({
            'type': 'cluster_label',
            'value': 'main.py cluster',
          }),
          dict({
            'type': 'dominant_kind',
            'value': None,
          }),
          dict({
            'type': 'dominant_language',
            'value': None,
          }),
        ]),
        'file': 'main.py',
        'refs': list([
          dict({
            'branch': 'main',
            'commit': 'abc',
            'id': 'doc:1',
            'label': 'main.py',
            'path': 'main.py',
            'repo': 'repo',
            'type': 'file',
          }),
        ]),
        'snippet': 'Document cluster for main.py',
      }),
      'id': 'chunk:c_c0',
      'kind': 'cluster_evidence',
      'layer': 'L2',
      'meta': dict({
        'aggregation': dict({
          'common_path_prefix': 'main.py',
          'doc_count': 1,
          'dominant_kind': None,
          'dominant_language': None,
          'edge_type_distribution': dict({
          }),
          'kind_distribution': dict({
          }),
          'member_count': 1,
          'representative': 'doc:1',
          'symbol_count': 0,
          'top_members': list([
            'doc:1',
          ]),
        }),
        'centrality': dict({
          'degree': 1.0,
          'degree_centrality': 0.5,
        }),
        'cluster_id': 'c0',
      }),
      'path': './chunks/c_c0.json',
      'render': dict({
        'text': 'Document cluster for main.py',
      }),
      'source': dict({
        'domain': 'code',
        'refs': list([
          dict({
            'branch': 'main',
            'commit': 'abc',
            'id': 'doc:1',
            'label': 'main.py',
            'path': 'main.py',
            'repo': 'repo',
            'type': 'file',
          }),
        ]),
      }),
      'title': 'main.py cluster',
      'version': 'v1',
    }),
    dict({
      'chunk_id': 'c_c1',
      'content': dict({
        'facts': list([
          dict({
            'type': 'cluster_size',
            'value': 1,
          }),
          dict({
            'type': 'cluster_label',
            'value': 'util.py cluster',
          }),
          dict({
            'type': 'dominant_kind',
            'value': None,
          }),
          dict({
            'type': 'dominant_language',
            'value': None,
          }),
        ]),
        'file': 'util.py',
        'refs': list([
          dict({
            'branch': 'main',
            'commit': 'abc',
            'id': 'doc:2',
            'label': 'util.py',
            'path': 'util.py',
            'repo': 'repo',
            'type': 'file',
          }),
        ]),
        'snippet': 'Document cluster for util.py',
      }),
      'id': 'chunk:c_c1',
      'kind': 'cluster_evidence',
      'layer': 'L2',
      'meta': dict({
        'aggregation': dict({
          'common_path_prefix': 'util.py',
          'doc_count': 1,
          'dominant_kind': None,
          'dominant_language': None,
          'edge_type_distribution': dict({
          }),
          'kind_distribution': dict({
          }),
          'member_count': 1,
          'representative': 'doc:2',
          'symbol_count': 0,
          'top_members': list([
            'doc:2',
          ]),
        }),
        'centrality': dict({
          'degree': 1.0,
          'degree_centrality': 0.5,
        }),
        'cluster_id': 'c1',
      }),
      'path': './chunks/c_c1.json',
      'render': dict({
        'text': 'Document cluster for util.py',
      }),
      'source': dict({
        'domain': 'code',
        'refs': list([
          dict({
            'branch': 'main',
            'commit': 'abc',
            'id': 'doc:2',
            'label': 'util.py',
            'path': 'util.py',
            'repo': 'repo',
            'type': 'file',
          }),
        ]),
      }),
      'title': 'util.py cluster',
      'version': 'v1',
    }),
    dict({
      'chunk_id': 'c_c2',
      'content': dict({
        'facts': list([
          dict({
            'type': 'cluster_size',
            'value': 1,
          }),
          dict({
            'type': 'cluster_label',
            'value': 'process cluster',
          }),
          dict({
            'type': 'dominant_kind',
            'value': 'function',
          }),
          dict({
            'type': 'dominant_language',
            'value': 'python',
          }),
        ]),
        'file': 'main.py',
        'range': dict({
          'end_col': 0,
          'end_line': 5,
          'start_col': 0,
          'start_line': 5,
        }),
        'refs': list([
          dict({
            'branch': 'main',
            'commit': 'abc',
            'id': 'sym:1',
            'label': 'process',
            'path': 'main.py',
            'repo': 'repo',
            'type': 'symbol',
          }),
        ]),
        'signature': 'process',
        'snippet': 'function process in main.py',
        'symbol': 'process',
      }),
      'id': 'chunk:c_c2',
      'kind': 'cluster_evidence',
      'layer': 'L2',
      'meta': dict({
        'aggregation': dict({
          'common_path_prefix': 'main.py',
          'doc_count': 0,
          'dominant_kind': 'function',
          'dominant_language': 'python',
          'edge_type_distribution': dict({
          }),
          'kind_distribution': dict({
            'function': 1,
          }),
          'member_count': 1,
          'representative': 'sym:1',
          'symbol_count': 1,
          'top_members': list([
            'sym:1',
          ]),
        }),
        'centrality': dict({
          'degree': 2.0,
          'degree_centrality': 1.0,
        }),
        'cluster_id': 'c2',
      }),
      'path': './chunks/c_c2.json',
      'render': dict({
        'text': 'function process in main.py',
      }),
      'source': dict({
        'domain': 'code',
        'refs': list([
          dict({
            'branch': 'main',
            'commit': 'abc',
            'id': 'sym:1',
            'label': 'process',
            'path': 'main.py',
            'repo': 'repo',
            'type': 'symbol',
          }),
        ]),
      }),
      'title': 'process cluster',
      'version': 'v1',
    }),
  ])
# ---
# name: TestProjectionContract.test_result_dict_keys_snapshot
  dict({
    'chunks': list([
      dict({
        'chunk_id': 'c_c0',
        'content': dict({
          'facts': list([
            dict({
              'type': 'cluster_size',
              'value': 1,
            }),
            dict({
              'type': 'cluster_label',
              'value': 'app/service.py cluster',
            }),
            dict({
              'type': 'dominant_kind',
              'value': None,
            }),
            dict({
              'type': 'dominant_language',
              'value': None,
            }),
          ]),
          'file': 'app/service.py',
          'refs': list([
            dict({
              'branch': 'main',
              'commit': 'abc',
              'id': 'doc:1',
              'label': 'app/service.py',
              'path': 'app/service.py',
              'repo': 'repo',
              'type': 'file',
            }),
          ]),
          'snippet': 'Document cluster for app/service.py',
        }),
        'id': 'chunk:c_c0',
        'kind': 'cluster_evidence',
        'layer': 'L2',
        'meta': dict({
          'aggregation': dict({
            'common_path_prefix': 'app/service.py',
            'doc_count': 1,
            'dominant_kind': None,
            'dominant_language': None,
            'edge_type_distribution': dict({
            }),
            'kind_distribution': dict({
            }),
            'member_count': 1,
            'representative': 'doc:1',
            'symbol_count': 0,
            'top_members': list([
              'doc:1',
            ]),
          }),
          'centrality': dict({
            'degree': 2.0,
            'degree_centrality': 1.0,
          }),
          'cluster_id': 'c0',
        }),
        'path': './chunks/c_c0.json',
        'render': dict({
          'text': 'Document cluster for app/service.py',
        }),
        'source': dict({
          'domain': 'code',
          'refs': list([
            dict({
              'branch': 'main',
              'commit': 'abc',
              'id': 'doc:1',
              'label': 'app/service.py',
              'path': 'app/service.py',
              'repo': 'repo',
              'type': 'file',
            }),
          ]),
        }),
        'title': 'app/service.py cluster',
        'version': 'v1',
      }),
      dict({
        'chunk_id': 'c_c1',
        'content': dict({
          'facts': list([
            dict({
              'type': 'cluster_size',
              'value': 1,
            }),
            dict({
              'type': 'cluster_label',
              'value': 'create_user cluster',
            }),
            dict({
              'type': 'dominant_kind',
              'value': 'function',
            }),
            dict({
              'type': 'dominant_language',
              'value': 'python',
            }),
          ]),
          'file': 'app/service.py',
          'range': dict({
            'end_col': 0,
            'end_line': 5,
            'start_col': 0,
            'start_line': 5,
          }),
          'refs': list([
            dict({
              'branch': 'main',
              'commit': 'abc',
              'id': 'sym:a',
              'label': 'create_user',
              'path': 'app/service.py',
              'repo': 'repo',
              'type': 'symbol',
            }),
          ]),
          'signature': 'create_user',
          'snippet': 'function create_user in app/service.py',
          'symbol': 'create_user',
        }),
        'id': 'chunk:c_c1',
        'kind': 'cluster_evidence',
        'layer': 'L2',
        'meta': dict({
          'aggregation': dict({
            'common_path_prefix': 'app/service.py',
            'doc_count': 0,
            'dominant_kind': 'function',
            'dominant_language': 'python',
            'edge_type_distribution': dict({
            }),
            'kind_distribution': dict({
              'function': 1,
            }),
            'member_count': 1,
            'representative': 'sym:a',
            'symbol_count': 1,
            'top_members': list([
              'sym:a',
            ]),
          }),
          'centrality': dict({
            'degree': 2.0,
            'degree_centrality': 1.0,
          }),
          'cluster_id': 'c1',
        }),
        'path': './chunks/c_c1.json',
        'render': dict({
          'text': 'function create_user in app/service.py',
        }),
        'source': dict({
          'domain': 'code',
          'refs': list([
            dict({
              'branch': 'main',
              'commit': 'abc',
              'id': 'sym:a',
              'label': 'create_user',
              'path': 'app/service.py',
              'repo': 'repo',
              'type': 'symbol',
            }),
          ]),
        }),
        'title': 'create_user cluster',
        'version': 'v1',
      }),
      dict({
        'chunk_id': 'c_c2',
        'content': dict({
          'facts': list([
            dict({
              'type': 'cluster_size',
              'value': 1,
            }),
            dict({
              'type': 'cluster_label',
              'value': 'get_user cluster',
            }),
            dict({
              'type': 'dominant_kind',
              'value': 'function',
            }),
            dict({
              'type': 'dominant_language',
              'value': 'python',
            }),
          ]),
          'file': 'app/service.py',
          'range': dict({
            'end_col': 0,
            'end_line': 10,
            'start_col': 0,
            'start_line': 10,
          }),
          'refs': list([
            dict({
              'branch': 'main',
              'commit': 'abc',
              'id': 'sym:b',
              'label': 'get_user',
              'path': 'app/service.py',
              'repo': 'repo',
              'type': 'symbol',
            }),
          ]),
          'signature': 'get_user',
          'snippet': 'function get_user in app/service.py',
          'symbol': 'get_user',
        }),
        'id': 'chunk:c_c2',
        'kind': 'cluster_evidence',
        'layer': 'L2',
        'meta': dict({
          'aggregation': dict({
            'common_path_prefix': 'app/service.py',
            'doc_count': 0,
            'dominant_kind': 'function',
            'dominant_language': 'python',
            'edge_type_distribution': dict({
            }),
            'kind_distribution': dict({
              'function': 1,
            }),
            'member_count': 1,
            'representative': 'sym:b',
            'symbol_count': 1,
            'top_members': list([
              'sym:b',
            ]),
          }),
          'centrality': dict({
            'degree': 2.0,
            'degree_centrality': 1.0,
          }),
          'cluster_id': 'c2',
        }),
        'path': './chunks/c_c2.json',
        'render': dict({
          'text': 'function get_user in app/service.py',
        }),
        'source': dict({
          'domain': 'code',
          'refs': list([
            dict({
              'branch': 'main',
              'commit': 'abc',
              'id': 'sym:b',
              'label': 'get_user',
              'path': 'app/service.py',
              'repo': 'repo',
              'type': 'symbol',
            }),
          ]),
        }),
        'title': 'get_user cluster',
        'version': 'v1',
      }),
    ]),
    'l0': dict({
      'content': dict({
        'importance': 0.44999999999999996,
        'summary': 'Snapshot projection over 3 nodes and 3 edges. Key communities: app/service.py cluster, create_user cluster, get_user cluster.',
        'tags': list([
          'snapshot',
          'projection',
          'overview',
        ]),
      }),
      'id': 'proj:proj_932c8f76ce8fe80cf025:l0',
      'kind': 'summary',
      'layer': 'L0',
      'meta': dict({
        'algo_version': 'algo_v2_hierarchical',
        'covers_edges': list([
          'doc:1->sym:a',
          'doc:1->sym:b',
          'sym:a->sym:b',
        ]),
        'covers_nodes': list([
          'doc:1',
          'sym:a',
          'sym:b',
        ]),
        'hidden_edge_count': 0,
        'hierarchy_level': 0,
        'parent_reason': 'community_coarsening',
        'projection_method': 'leiden',
        'root_cluster': 'c0',
        'xrefs': list([
          dict({
            'dst': 'c1',
            'src': 'c0',
            'weight': 8.0,
          }),
          dict({
            'dst': 'c2',
            'src': 'c0',
            'weight': 8.0,
          }),
          dict({
            'dst': 'c2',
            'src': 'c1',
            'weight': 4.0,
          }),
          dict({
            'dst': 'c0',
            'src': 'c1',
            'weight': 2.0,
          }),
          dict({
            'dst': 'c0',
            'src': 'c2',
            'weight': 2.0,
          }),
        ]),
      }),
      'path': '/projection/proj_932c8f76ce8fe80cf025/l0',
      'render': dict({
        'text': 'Snapshot projection over 3 nodes and 3 edges. Key communities: app/service.py cluster, create_user cluster, get_user cluster.',
      }),
      'source': dict({
        'domain': 'code',
        'refs': list([
          dict({
            'branch': 'main',
            'commit': 'abc',
            'id': 'repo',
            'repo': 'repo',
            'type': 'repository',
          }),
          dict({
            'branch': 'main',
            'commit': 'abc',
            'id': 'abc',
            'repo': 'repo',
            'type': 'commit',
          }),
          dict({
            'branch': 'main',
            'commit': 'abc',
            'id': 'snap:repo:abc',
            'label': 'scope:snapshot:repo',
            'repo': 'repo',
            'type': 'document',
          }),
        ]),
      }),
      'title': 'Projection snapshot L0',
      'version': 'v1',
    }),
    'l1': dict({
      'content': dict({
        'decisions': list([
          'cluster_method=leiden',
          'backbone_edges=2',
          'hierarchy_level=0',
          'root_cluster=c0',
        ]),
        'navigation': list([
          dict({
            'label': 'app/service.py cluster',
            'ref': dict({
              'branch': 'main',
              'commit': 'abc',
              'id': 'doc:1',
              'label': 'app/service.py',
              'path': 'app/service.py',
              'repo': 'repo',
              'type': 'file',
            }),
          }),
          dict({
            'label': 'create_user cluster',
            'ref': dict({
              'branch': 'main',
              'commit': 'abc',
              'id': 'sym:a',
              'label': 'create_user',
              'path': 'app/service.py',
              'repo': 'repo',
              'type': 'symbol',
            }),
          }),
          dict({
            'label': 'get_user cluster',
            'ref': dict({
              'branch': 'main',
              'commit': 'abc',
              'id': 'sym:b',
              'label': 'get_user',
              'path': 'app/service.py',
              'repo': 'repo',
              'type': 'symbol',
            }),
          }),
        ]),
        'related_code': list([
          dict({
            'branch': 'main',
            'commit': 'abc',
            'id': 'repo',
            'repo': 'repo',
            'type': 'repository',
          }),
          dict({
            'branch': 'main',
            'commit': 'abc',
            'id': 'abc',
            'repo': 'repo',
            'type': 'commit',
          }),
          dict({
            'branch': 'main',
            'commit': 'abc',
            'id': 'snap:repo:abc',
            'label': 'scope:snapshot:repo',
            'repo': 'repo',
            'type': 'document',
          }),
        ]),
        'related_memory': list([
        ]),
        'relations': dict({
          'backbone': list([
            dict({
              'dst': 'c1',
              'src': 'c0',
              'type': 'tree',
            }),
            dict({
              'dst': 'c2',
              'src': 'c0',
              'type': 'tree',
            }),
          ]),
          'hierarchy': list([
          ]),
          'xref': list([
            dict({
              'confidence': 1.0,
              'id': 'c0->c1',
              'title': 'c0 -> c1',
              'type': 'xref',
            }),
            dict({
              'confidence': 1.0,
              'id': 'c0->c2',
              'title': 'c0 -> c2',
              'type': 'xref',
            }),
            dict({
              'confidence': 1.0,
              'id': 'c1->c2',
              'title': 'c1 -> c2',
              'type': 'xref',
            }),
            dict({
              'confidence': 0.5,
              'id': 'c1->c0',
              'title': 'c1 -> c0',
              'type': 'xref',
            }),
            dict({
              'confidence': 0.5,
              'id': 'c2->c0',
              'title': 'c2 -> c0',
              'type': 'xref',
            }),
          ]),
        }),
        'sections': list([
          dict({
            'name': 'app/service.py cluster',
            'text': '1 nodes',
          }),
          dict({
            'name': 'create_user cluster',
            'text': '1 nodes',
          }),
          dict({
            'name': 'get_user cluster',
            'text': '1 nodes',
          }),
        ]),
        'summary': 'Snapshot hierarchy with 3 clusters, 2 directed backbone links, and 5 cross-links.',
      }),
      'id': 'proj:proj_932c8f76ce8fe80cf025:l1',
      'kind': 'summary',
      'layer': 'L1',
      'meta': dict({
        'algo_version': 'algo_v2_hierarchical',
        'covers_edges': list([
          'doc:1->sym:a',
          'doc:1->sym:b',
          'sym:a->sym:b',
        ]),
        'covers_nodes': list([
          'doc:1',
          'sym:a',
          'sym:b',
        ]),
        'hidden_edge_count': 0,
        'hierarchy_level': 0,
        'parent_reason': 'backbone_arborescence',
        'projection_method': 'leiden',
        'root_cluster': 'c0',
        'xrefs': list([
          dict({
            'dst': 'c1',
            'src': 'c0',
            'weight': 8.0,
          }),
          dict({
            'dst': 'c2',
            'src': 'c0',
            'weight': 8.0,
          }),
          dict({
            'dst': 'c2',
            'src': 'c1',
            'weight': 4.0,
          }),
          dict({
            'dst': 'c0',
            'src': 'c1',
            'weight': 2.0,
          }),
          dict({
            'dst': 'c0',
            'src': 'c2',
            'weight': 2.0,
          }),
        ]),
      }),
      'path': '/projection/proj_932c8f76ce8fe80cf025/l1',
      'render': dict({
        'text': 'Snapshot hierarchy with 3 clusters, 2 directed backbone links, and 5 cross-links.',
      }),
      'source': dict({
        'domain': 'code',
        'refs': list([
          dict({
            'branch': 'main',
            'commit': 'abc',
            'id': 'repo',
            'repo': 'repo',
            'type': 'repository',
          }),
          dict({
            'branch': 'main',
            'commit': 'abc',
            'id': 'abc',
            'repo': 'repo',
            'type': 'commit',
          }),
          dict({
            'branch': 'main',
            'commit': 'abc',
            'id': 'snap:repo:abc',
            'label': 'scope:snapshot:repo',
            'repo': 'repo',
            'type': 'document',
          }),
        ]),
      }),
      'title': 'Projection snapshot L1',
      'version': 'v1',
    }),
    'l2_index': dict({
      'content': dict({
        'chunks': list([
          dict({
            'chunk_id': 'c_c0',
            'end_line': None,
            'file': 'app/service.py',
            'kind': 'cluster_evidence',
            'label': 'app/service.py',
            'path': './chunks/c_c0.json',
            'start_line': None,
          }),
          dict({
            'chunk_id': 'c_c1',
            'end_line': 5,
            'file': 'app/service.py',
            'kind': 'cluster_evidence',
            'label': 'create_user',
            'path': './chunks/c_c1.json',
            'start_line': 5,
          }),
          dict({
            'chunk_id': 'c_c2',
            'end_line': 10,
            'file': 'app/service.py',
            'kind': 'cluster_evidence',
            'label': 'get_user',
            'path': './chunks/c_c2.json',
            'start_line': 10,
          }),
        ]),
      }),
      'id': 'proj:proj_932c8f76ce8fe80cf025:l2',
      'kind': 'summary',
      'layer': 'L2',
      'meta': dict({
        'algo_version': 'algo_v2_hierarchical',
        'covers_edges': list([
          'doc:1->sym:a',
          'doc:1->sym:b',
          'sym:a->sym:b',
        ]),
        'covers_nodes': list([
          'doc:1',
          'sym:a',
          'sym:b',
        ]),
        'hidden_edge_count': 0,
        'parent_reason': 'chunked_evidence',
        'projection_method': 'leiden',
        'xrefs': list([
          dict({
            'dst': 'c1',
            'src': 'c0',
            'weight': 8.0,
          }),
          dict({
            'dst': 'c2',
            'src': 'c0',
            'weight': 8.0,
          }),
          dict({
            'dst': 'c2',
            'src': 'c1',
            'weight': 4.0,
          }),
          dict({
            'dst': 'c0',
            'src': 'c1',
            'weight': 2.0,
          }),
          dict({
            'dst': 'c0',
            'src': 'c2',
            'weight': 2.0,
          }),
        ]),
      }),
      'path': '/projection/proj_932c8f76ce8fe80cf025/l2',
      'render': dict({
        'text': 'Detailed evidence available in 3 chunks.',
      }),
      'source': dict({
        'domain': 'code',
        'refs': list([
          dict({
            'branch': 'main',
            'commit': 'abc',
            'id': 'repo',
            'repo': 'repo',
            'type': 'repository',
          }),
          dict({
            'branch': 'main',
            'commit': 'abc',
            'id': 'abc',
            'repo': 'repo',
            'type': 'commit',
          }),
          dict({
            'branch': 'main',
            'commit': 'abc',
            'id': 'snap:repo:abc',
            'label': 'scope:snapshot:repo',
            'repo': 'repo',
            'type': 'document',
          }),
        ]),
      }),
      'title': 'Projection snapshot L2',
      'version': 'v1',
    }),
    'projection_id': 'proj_932c8f76ce8fe80cf025',
    'scope_key': 'repo',
    'scope_kind': 'snapshot',
    'snapshot_id': 'snap:repo:abc',
    'warnings': list([
    ]),
  })
# ---
